	* Feature: Added Secret Area markers that make a note appear on
		screen when the player enters a secret area (#385 by
		Marvin Gülker)
	* Feature: Add an in-game console reachable via [F7] (#518 by
		Chris Jacobsen, implementation by Marvin Gülker)
	* Feature: Make copy & paste work together with the system clipboard
	* Feature: Add alternate overworld pathes (#19 by Marvin Gülker)
	* Fix: Tiles in Editor are not Mirrored Properly (#149 by Justin Rissler)
	* Fix: Invibility save problem (#180 by Chris Jacobsen)
	* Fix: Crash on wn_05_top (#389, patch by Georger Araújo)
	* Fix: Added scoring for Larries (PR #460 by Chris Jacobsen)
	* Fix: CEGUI log file was not created (#506 by Marvin Gülker)
	* Fix: Boost 1.60.0 breaks compilation (#510 by Marvin Gülker)
	* Fix: Crash on cache regeneration (#552 by Marvin Gülker)
	* Dependencies: Removed SDL 1 and instead depend on SFML (Ticket
		#105 by Chris Jacobsen)
	* Dependencies: Upgraded CEGUI from 0.7.9 to 0.8.7 (ticket #10 by
		Marvin Gülker)
	* Dependencies: Upgraded mruby from 1.0.0 to 1.4.1
	* Dependencies: New dependency on the `tinyclipboard' library
	* Misc: C++11 compilation support
	* Misc: Renamed "1-UP berry" to "Life berry" (#365 by Chris Jacobsen)
	* Misc: Added Travis CI config (PR #453 by Lauri Ojansivu)
	* Misc: "God Mode" renamed to "Omega Mode" (#481 by Marvin Gülker)
	* Misc: New world graphics category "Mountain"
	* Misc: New compilation option ENABLE_EDITOR.
	* Misc: New compilation option USE_SYSTEM_TINYCLIPBOARD.

2015-08-17  Marvin Gülker  <quintus@quintilianus.eu>

	* Version 2.0.0 released.
	* Changes: Too many to count. We promise to keep a better change
		log next time.

Copyright © 2015 The TSC Contributors
This file is part of TSC.

This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 3 of the License, or
(at your option) any later version.
